[gd_scene load_steps=6 format=2]

[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/InheritableCategoryArea.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/InheritableSetting/InheritableSettingCheckButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/SettingSectionButton/DisplayCategoryArea.gd" type="Script" id=3]

[sub_resource type="ButtonGroup" id=1]

[sub_resource type="ButtonGroup" id=2]

[node name="DisplayCategoryArea" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="InheritableSettingVolume" parent="." index="0"]
visible = false

[node name="InheritableSettingEmpty" parent="." index="1"]
visible = false
margin_top = 0.0
margin_bottom = 55.0

[node name="InheritableSettingOptionButton" parent="." index="2"]
visible = false
margin_top = 0.0
margin_bottom = 55.0

[node name="InheritableSettingCheckBox" parent="." index="3"]
visible = false
margin_top = 0.0
margin_bottom = 71.0
ButtonGrouper = SubResource( 1 )

[node name="InheritableSettingCheckBox2" parent="." index="4"]
visible = false
margin_top = 0.0
margin_bottom = 71.0
ButtonGrouper = SubResource( 2 )

[node name="InheritableSettingCheckButton" parent="." index="5"]
visible = false
margin_top = 0.0
margin_bottom = 80.0

[node name="InheritableSettingCheckButton2" parent="." index="6"]
visible = false
margin_top = 0.0
margin_bottom = 80.0

[node name="TestoidProgressBar" parent="." index="7"]
visible = false
margin_top = 0.0
margin_bottom = 55.0

[node name="TestoidSpectrumAnalyzer" parent="." index="8"]
visible = false
margin_top = 0.0
margin_bottom = 250.0

[node name="TestoidMusicPlayer" parent="." index="9"]
visible = false
margin_top = 0.0
margin_bottom = 67.0

[node name="FullScreen" parent="." index="10" instance=ExtResource( 2 )]
margin_top = 0.0
margin_right = 1920.0
margin_bottom = 63.0
VariableName = "Full Screen"

[node name="Vsync" parent="." index="11" instance=ExtResource( 2 )]
margin_top = 67.0
margin_right = 1920.0
margin_bottom = 130.0
VariableName = "Vsync"
[connection signal="Statement" from="FullScreen" to="." method="_on_FullScreen_Statement"]
[connection signal="Statement" from="Vsync" to="." method="_on_Vsync_Statement"]
